Bugfix FXIOS-9429 [Microsurvey] Add surface id to telemetry events (#20903)
* Bugfix FXIOS-9429 [Microsurvey] Add surface id to telemetry events

* Fix tests

* add bugs + data_reviews details

--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -662,10 +662,17 @@ microsurvey:
     type: event
     description: |
         The survey surface (bottom sheet) was shown and visible.
+    extra_keys:
+      survey_id:
+        type: string
+        description: |
+          The id of the survey.
     bugs:
       - https://github.com/mozilla-mobile/firefox-ios/issues/19506
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20875
     data_reviews:
       - https://github.com/mozilla-mobile/firefox-ios/pull/20801
+      - https://github.com/mozilla-mobile/firefox-ios/pull/20903
     notification_emails:
       - fx-ios-data-stewards@mozilla.com
     expires: "2025-01-01"
@@ -674,10 +681,17 @@ microsurvey:
     type: event
     description: |
         Records that the user tapped on the privacy notice.
+    extra_keys:
+      survey_id:
+        type: string
+        description: |
+          The id of the survey.
     bugs:
       - https://github.com/mozilla-mobile/firefox-ios/issues/19506
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20875
     data_reviews:
       - https://github.com/mozilla-mobile/firefox-ios/pull/20801
+      - https://github.com/mozilla-mobile/firefox-ios/pull/20903
     notification_emails:
       - fx-ios-data-stewards@mozilla.com
     data_sensitivity:
@@ -688,10 +702,17 @@ microsurvey:
     type: event
     description: |
         Records that the user tapped on the close button to dismiss the survey.
+    extra_keys:
+      survey_id:
+        type: string
+        description: |
+          The id of the survey.
     bugs:
       - https://github.com/mozilla-mobile/firefox-ios/issues/19506
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20875
     data_reviews:
       - https://github.com/mozilla-mobile/firefox-ios/pull/20801
+      - https://github.com/mozilla-mobile/firefox-ios/pull/20903
     notification_emails:
       - fx-ios-data-stewards@mozilla.com
     data_sensitivity:
@@ -707,10 +728,16 @@ microsurvey:
         type: string
         description: |
           The user's selected option e.g. "satisfied".
+      survey_id:
+        type: string
+        description: |
+          The id of the survey.
     bugs:
       - https://github.com/mozilla-mobile/firefox-ios/issues/19506
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20875
     data_reviews:
       - https://github.com/mozilla-mobile/firefox-ios/pull/20801
+      - https://github.com/mozilla-mobile/firefox-ios/pull/20903
     notification_emails:
       - fx-ios-data-stewards@mozilla.com
     data_sensitivity:
@@ -721,10 +748,17 @@ microsurvey:
     type: event
     description: |
         Records that the confirmation message in the survey has been viewed by the user.
+    extra_keys:
+      survey_id:
+        type: string
+        description: |
+          The id of the survey.
     bugs:
-        - https://github.com/mozilla-mobile/firefox-ios/issues/20800
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20800
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20875
     data_reviews:
-        - https://github.com/mozilla-mobile/firefox-ios/pull/20840
+      - https://github.com/mozilla-mobile/firefox-ios/pull/20840
+      - https://github.com/mozilla-mobile/firefox-ios/pull/20903
     notification_emails:
         - fx-ios-data-stewards@mozilla.com
     expires: "2025-01-01"
