Move edit flag to be a variable

--- a/firefox-ios/nimbus-features/addressAutofillFeature.yaml
+++ b/firefox-ios/nimbus-features/addressAutofillFeature.yaml
@@ -7,17 +7,7 @@ features:
         description: If true, we will allow user to use the address autofill feature
         type: Boolean
         default: false
-    defaults:
-      - channel: beta
-        value:
-          status: true
-      - channel: developer
-        value:
-          status: true
-  address-autofill-edit:
-    description: This property defines if the address editing is enabled in Settings
-    variables:
-      status:
+      address-autofill-edit:
         description: If true, we will allow user to edit the address
         type: Boolean
         default: false
@@ -25,6 +15,8 @@ features:
       - channel: beta
         value:
           status: false
+          address-autofill-edit: false
       - channel: developer
         value:
           status: true
+          address-autofill-edit: true
