Let's run this at 2am. Also we should trigger this workflow manually.

--- a/.github/workflows/firefox-ios-ui-tests.yml
+++ b/.github/workflows/firefox-ios-ui-tests.yml
@@ -1,7 +1,9 @@
 name: "Firefox UI Tests"
     
 on:
-    workflow_dispatch:
+  workflow_dispatch: {}
+  schedule:
+    - cron: "0 2 * * *"
 
 env:
     browser: firefox-ios
