Try to reach the websites before the tests start

--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -66,6 +66,12 @@ jobs:
               run: |
                 gem install xcpretty -v 0.3.0
                 pip install blockkit==1.9.1
+                curl https://www.google.com
+                curl https://www.example.com
+                curl https://www.mozilla.org/en-US/
+                curl https://www.facebook.com
+                curl https://news.ycombinator.com
+
             - name: Setup Xcode
               id: xcode
               run: |
