Disable drag and drop again...

--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -69,6 +69,7 @@ jobs:
                 curl https://www.google.com
                 curl https://www.example.com
                 curl https://www.mozilla.org/en-US/
+                curl https://developer.mozilla.org/en-US/
                 curl https://www.facebook.com
                 curl https://news.ycombinator.com
 
