Enable offloading network

--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -66,12 +66,9 @@ jobs:
               run: |
                 gem install xcpretty -v 0.3.0
                 pip install blockkit==1.9.1
-                curl https://www.google.com
-                curl https://www.example.com
-                curl https://www.mozilla.org/en-US/
-                curl https://developer.mozilla.org/en-US/
-                curl https://www.facebook.com
-                curl https://news.ycombinator.com
+                # Reduce network flakiness
+                sysctl -w net.link.generic.system.hwcksum_tx=0
+                sysctl -w net.link.generic.system.hwcksum_rx=0
 
             - name: Setup Xcode
               id: xcode
