--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -67,8 +67,8 @@ jobs:
                 gem install xcpretty -v 0.3.0
                 pip install blockkit==1.9.1
                 # Reduce network flakiness
-                sysctl -w net.link.generic.system.hwcksum_tx=0
-                sysctl -w net.link.generic.system.hwcksum_rx=0
+                sudo sysctl -w net.link.generic.system.hwcksum_tx=0
+                sudo sysctl -w net.link.generic.system.hwcksum_rx=0
 
             - name: Setup Xcode
               id: xcode
