--- a/.github/workflows/firefox-ios-ui-tests.yml
+++ b/.github/workflows/firefox-ios-ui-tests.yml
@@ -61,7 +61,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          ios_simulator: ['iPhone 15 Plus']
+          ios_simulator: ['iPhone 15 Plus', 'iPad Pro 13-inch (M4)']
       steps:
       - name: Check out source code
         uses: actions/checkout@v4.1.7
@@ -70,7 +70,10 @@ jobs:
         run: |
           gem install xcpretty -v 0.3.0
           pip install blockkit==1.9.1
-          npm install -g junit-report-merger@7.0.0       
+          npm install -g junit-report-merger@7.0.0
+          # Reduce network flakiness
+          sudo sysctl -w net.link.generic.system.hwcksum_tx=0
+          sudo sysctl -w net.link.generic.system.hwcksum_rx=0   
       - name: Setup Xcode
         id: xcode
         run: |
@@ -209,7 +212,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                ios_simulator: ['iPhone 15 Plus']
+                ios_simulator: ['iPhone 15 Plus', 'iPad Pro 13-inch (M4)']
         steps:
             - name: Check out source code
               uses: actions/checkout@v4.1.7
@@ -218,6 +221,9 @@ jobs:
               run: |
                 gem install xcpretty -v 0.3.0
                 pip install blockkit==1.9.1
+                # Reduce network flakiness
+                sudo sysctl -w net.link.generic.system.hwcksum_tx=0
+                sudo sysctl -w net.link.generic.system.hwcksum_rx=0
             - name: Get derived data
               id: download-derived-data
               uses: actions/download-artifact@v4
