--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -117,7 +117,7 @@ jobs:
               uses: actions/upload-artifact@v4.3.3
               with:
                 name: ${{ env.browser }}-${{ matrix.xcodebuild_test_plan }}-${{ matrix.ios_simulator }}-junit-${{ github.run_number }}
-                path: ${{ env.browser }}/junit-*.xml
+                path: ${{ env.browser }}/build/reports/junit.xml
                 retention-days: 90
             - name: Report to Slack
               id: slack
