--- a/.github/workflows/firefox-ios-ui-tests.yml
+++ b/.github/workflows/firefox-ios-ui-tests.yml
@@ -253,7 +253,7 @@ jobs:
               uses: actions/upload-artifact@v4.3.3
               with:
                 name: ${{ env.browser }}-fullfunctional-${{ matrix.ios_simulator }}-junit-${{ github.run_number }}
-                path: ${{ env.browser }}/build/reports/junit.xml
+                path: ${{ env.browser }}/junit-*.xml
                 retention-days: 90
             - name: Upload log file
               id: upload-log
