--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -40,7 +40,8 @@ jobs:
                   -scheme ${{ env.xcodebuild_scheme }} \
                   -target ${{ env.xcodebuild_target }} \
                   -derivedDataPath ~/DerivedData \
-                  -destination 'platform=iOS Simulator,name=${{ env.ios_simulator_default }},OS=${{ env.ios_version }}'
+                  -destination 'platform=iOS Simulator,name=${{ env.ios_simulator_default }},OS=${{ env.ios_version }}' \
+                  COMPILER_INDEX_STORE_ENABLE=NO CODE_SIGN_IDENTITY= CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
               working-directory: ${{ env.browser }}
             - name: Save Derived Data
               id: upload-derived-data
@@ -66,7 +67,15 @@ jobs:
               run: |
                 gem install xcpretty -v 0.3.0
                 pip install blockkit==1.9.1
-
+            - name: Ping all URLs
+              id: urls
+              run: |
+                curl https://www.example.com
+                curl https://www.google.com
+                curl https://www.mozilla.org
+                curl https://blockads.fivefilters.org/
+                curl https://www.facebook.com
+                curl https://news.ycombinator.com
             - name: Setup Xcode
               id: xcode
               run: |
