--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -54,6 +54,7 @@ jobs:
         name: Run tests
         runs-on: macos-14
         needs: compile
+        concurrency: ${{ matrix.xcodebuild_test_plan }}
         strategy:
             fail-fast: false
             matrix:
